--- a/index.html
+++ b/index.html
@@ -3,30 +3,60 @@
 
 <head>
 <title> My Protofolio Page </title>  
+<link
+rel = "stylesheet"
+type = "text/css"
+href= 'style.css'
 
+/>
 </head>
 
 <body>
 
-<h1>Mahin Sanklecha.</h1>    
+<div class = 'header'>
+
+
+<h1>Mahin Sanklecha.</h1>  
+
+<div class = 'menu'>
 
 
 <a href="index.html">Projects</a>
 <a href = "about me.html">About Me </a>
+</div>
+</div>
+
 
 <h2>Games Designed By Me</h2>
 <p> Games Use p5.js,p5.play & Matter.js</p>
+
+<div class = 'grid'>
+<div class = 'item'>
 <a href = " https://mahin-stack.github.io/c-46-master/"> <img src ="img.PNG" width=250 height = 250/></a>
 <p>My Own Game</p>
+</div>
+<div class = 'item'>
 <a href = "https://mahin-stack.github.io/c-38-mas/"> <img src = "img2.PNG" width = 250 height = 250/></a>
 <p>My Second Game</p>
+</div>
 
+
+<div class = 'item'>
+<a href = "index.html"> <img src = "Capture.PNG" width = 260 height = 280/> </a>
+<p>my third game</p>
+</div>
+
+
+</div>
+
+<div class = 'footer'>
 <a href = "#"> <img src = "fb.png" width = 80 height = 80/> </a>
 
 <a href="#"><img src = "insta.png" width= 80 height = 80/></a>
 
 <a href = "#"><img src = "youtube.png" width = 80 height = 80/></a>
 
+</div>
 </body>
 
 </html>
